openshift/mongo.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: lucas-calculator-mongo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: lucas-calculator-mongo
  template:
    metadata:
      labels:
        app: lucas-calculator-mongo
    spec:
      containers:
      - name: lucas-calculator-mongo
        image: mongo:7.0
        ports:
        - containerPort: 27017
        volumeMounts:
        - name: lucas-mongo-storage
          mountPath: /data/db
        - name: init-script
          mountPath: /docker-entrypoint-initdb.d
      volumes:
      - name: lucas-mongo-storage
        persistentVolumeClaim:
          claimName: lucas-mongo-pvc
      - name: init-script
        configMap:
          name: lucas-mongo-init-config

---

apiVersion: v1
kind: Service
metadata:
  name: lucas-calculator-mongo
spec:
  selector:
    app: lucas-calculator-mongo
  ports:
  - port: 27017
    targetPort: 27017
