openshift/backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lucas-calculator-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: lucas-calculator-backend
  template:
    metadata:
      labels:
        app: lucas-calculator-backend
    spec:
      containers:
        - name: backend
          image: harbor.kakor.ovh/ipim2il/lucas-calculator-backend:latest
          ports:
            - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: lucas-calculator-backend
spec:
  type: ClusterIP
  selector:
    app: lucas-calculator-backend
  ports:
    - name: http
      port: 3000
      targetPort: 3000

---

apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: lucas-calculator-backend
spec:
  to:
    kind: Service
    name: lucas-calculator-backend
  port:
    targetPort: 3000
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
