openshift/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lucas-calculator-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: lucas-calculator-frontend
  template:
    metadata:
      labels:
        app: lucas-calculator-frontend
    spec:
      containers:
        - name: frontend
          image: harbor.kakor.ovh/ipim2il/lucas-calculator-frontend:latest
          ports:
            - containerPort: 5173
---

apiVersion: v1
kind: Service
metadata:
  name: lucas-calculator-frontend
spec:
  selector:
    app: lucas-calculator-frontend
  ports:
  - name: http
    port: 80
    targetPort: 5173

---

# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: lucas-calculator-frontend
# spec:
#   rules:
#     - host: lucas-calculator-frontend.apps.openshift.kakor.ovh
#       http:
#         paths:
#         - path: ''
#           pathType: ImplementationSpecific
#           backend:
#             service:
#               name: lucas-calculator-frontend
#               port:
#                 number: 80
#   tls:
#     - {}

---

apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: lucas-calculator-frontend
spec:
  host: lucas-calculator-frontend.apps.openshift.kakor.ovh
  to:
    kind: Service
    name: lucas-calculator-frontend
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
